--- a/package.json
+++ b/package.json
@@ -27,13 +27,23 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
-    "browserify-shim": "^3.8.12",
     "fs": "0.0.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-ejs": "^2.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "browserify-shim": {
+    "jquery": {
+      "exports": "$"
+    }
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
